--- a/SCME.UI/PagesUser/UserTestPage.xaml
+++ b/SCME.UI/PagesUser/UserTestPage.xaml
@@ -99,17 +99,23 @@
                 </TextBlock.Text>
             </TextBlock>
 
-            <Label x:Name="lblDeviceClass" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" HorizontalAlignment="Center" Content="{x:Static res:Resources.DeviceRTClass}" FontSize="24" FontWeight="Bold" Height="Auto"/>
         </Grid>
+        <Label x:Name="lblDeviceClass" Grid.Column="2" Grid.Row="0" HorizontalAlignment="Left" Content="{x:Static res:Resources.DeviceRTClass}" FontSize="24" FontWeight="Bold" Height="Auto"/>
 
-        <Label Grid.Column="0" x:Name="lblSettingTemperature" Grid.Row="4" HorizontalAlignment="Center" Content="{x:Static res:Resources.SettingTemperatureName}" FontSize="25" Height="Auto" Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=TempIsVisible, Converter={StaticResource B2V}}"/>
-        <Label Grid.Column="0" Grid.Row="5" HorizontalAlignment="Center" Content="0" x:Name="SettingTemperatureLabel" FontSize="28" Height="Auto" Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=TempIsVisible, Converter={StaticResource B2V}}"/>
+        <StackPanel Orientation="Horizontal" Grid.Row="4" HorizontalAlignment="Center">
+            <Label x:Name="lblSettingTemperature" Content="{x:Static res:Resources.SettingTemperatureName}" FontSize="25" Height="Auto" Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=TempIsVisible, Converter={StaticResource B2V}}"/>
+            <Label HorizontalAlignment="Center" Content="0" x:Name="SettingTemperatureLabel" FontSize="28" Height="Auto" Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=TempIsVisible, Converter={StaticResource B2V}}"/>
+        </StackPanel>
 
-        <Label Grid.Column="1" x:Name="lblTitleTop" Grid.Row="4" HorizontalAlignment="Center" Content="{x:Static res:Resources.TopTempName}" FontSize="25" Height="40" VerticalAlignment="Top" Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=TempIsVisible, Converter={StaticResource B2V}}"/>
-        <Label Grid.Column="1" Grid.Row="5" HorizontalAlignment="Center" Content="0" x:Name="TopTempLabel" Background="LightGreen" FontSize="28" Height="Auto" Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=TempIsVisible, Converter={StaticResource B2V}}"/>
+        <StackPanel Orientation="Horizontal" Grid.Row="4" Grid.Column="1" HorizontalAlignment="Center">
+            <Label x:Name="lblTitleTop"  HorizontalAlignment="Center" Content="{x:Static res:Resources.TopTempName}" FontSize="25" Height="Auto" Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=TempIsVisible, Converter={StaticResource B2V}}"/>
+            <Label HorizontalAlignment="Center" Content="0" x:Name="TopTempLabel" Background="LightGreen" FontSize="28" Height="Auto" Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=TempIsVisible, Converter={StaticResource B2V}}"/>
+        </StackPanel>
 
-        <Label Grid.Column="2" x:Name="lblTitleBot" Grid.Row="4" HorizontalAlignment="Center" Content="{x:Static res:Resources.BotTempName}" FontSize="25" Height="Auto" Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=TempIsVisible, Converter={StaticResource B2V}}"/>
-        <Label Grid.Column="2" x:Name="BotTempLabel" Grid.Row="5" HorizontalAlignment="Center" Content="0" Background="LightGreen" FontSize="28" Height="Auto" Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=TempIsVisible, Converter={StaticResource B2V}}"/>
+        <StackPanel Orientation="Horizontal" Grid.Row="4" Grid.Column="2" HorizontalAlignment="Center">
+            <Label  x:Name="lblTitleBot"  HorizontalAlignment="Center" Content="{x:Static res:Resources.BotTempName}" FontSize="25" Height="Auto" Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=TempIsVisible, Converter={StaticResource B2V}}"/>
+            <Label x:Name="BotTempLabel" HorizontalAlignment="Center" Content="0" Background="LightGreen" FontSize="28" Height="Auto" Visibility="{Binding Source={x:Static uiServiceConfig:Settings.Default}, Path=TempIsVisible, Converter={StaticResource B2V}}"/>
+        </StackPanel>
 
         <dynamicDataDisplay:ChartPlotter x:Name="chartPlotter1" Grid.Row="6" Grid.ColumnSpan="2" Grid.Column="0" Margin="0,8,10,10" Background="Transparent" Foreground="{StaticResource xBlack1}" BorderBrush="Transparent" IsTabStop="False">
             <dynamicDataDisplay:HorizontalAxisTitle x:Name="chartPlotter1HorizontalAxisTitle" Content="{x:Static res:Resources.Graph_V}" />
@@ -129,24 +135,28 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
-
             <Label Content="{x:Static res:Resources.Position_1}" Grid.Column="0" Grid.Row="0" HorizontalContentAlignment="Center" FontSize="28" />
-            <customControl:ListViewResults Grid.Row="1" MaxHeight="740" x:Name="ListViewResults1" ItemsSource="{Binding ElementName=userTestPage, Path=Profile.TestParametersAndNormatives}"/>
-
-            <Grid Grid.Row="2" Margin="35,0,0,0">
-                <Grid.Visibility>
-                    <MultiBinding Converter="{StaticResource MB2V}">
-                        <Binding ElementName="userTestPage" Path="Profile.IsHeightMeasureEnabled" />
-                        <Binding Source="{x:Static uiServiceConfig:Settings.Default}" Path="IsHeighMeasureEnable" />
-                    </MultiBinding>
-                </Grid.Visibility>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="1*" />
-                    <ColumnDefinition Width="0.95*" />
-                </Grid.ColumnDefinitions>
-                <Label Content="{x:Static res:Resources.Height}" Grid.Column="0"  Height="Auto" />
-                <Label Name="labelHeightResult1" x:FieldModifier="private" Grid.Column="1" Margin="0,0,7,0" HorizontalContentAlignment="Right" FontSize="{StaticResource FontSize26}" Height="Auto" />
-            </Grid>
+            <Border BorderThickness="1" BorderBrush="Black" Grid.Row="1" Margin="6,0,11,2">
+                <Grid Margin="-10,0,0,0">
+                    <Grid.Visibility>
+                        <MultiBinding Converter="{StaticResource MB2V}">
+                            <Binding ElementName="userTestPage" Path="Profile.IsHeightMeasureEnabled" />
+                            <Binding Source="{x:Static uiServiceConfig:Settings.Default}" Path="IsHeighMeasureEnable" />
+                        </MultiBinding>
+                    </Grid.Visibility>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="115"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="70"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Label Content="{x:Static res:Resources.Height}" Grid.Column="0" Height="Auto" />
+                    <Rectangle Fill="Black" Grid.Column="1" Width="1"/>
+                    <Rectangle Fill="Black" Grid.Column="2" Width="1" Margin="0,0,-8,0" HorizontalAlignment="Right"/>
+                    <Label Name="labelHeightResult1" x:FieldModifier="private" Grid.Column="3" HorizontalContentAlignment="Right" FontSize="{StaticResource FontSize26}" Height="Auto" />
+                </Grid>
+            </Border>
+            <customControl:ListViewResults Grid.Row="2" MaxHeight="740" x:Name="ListViewResults1" ItemsSource="{Binding ElementName=userTestPage, Path=Profile.TestParametersAndNormatives}"/>
         </Grid>
 
         <Line x:Name="line1" HorizontalAlignment="Left" Stroke="{StaticResource xBlue1}" StrokeThickness="1"
@@ -159,25 +169,28 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
-
             <Label Content="{x:Static res:Resources.Position_2}" Grid.Column="0" Grid.Row="0" HorizontalContentAlignment="Center" FontSize="28" />
-            <customControl:ListViewResults Grid.Row="1" MaxHeight="740" x:Name="ListViewResults2" ItemsSource="{Binding ElementName=userTestPage, Path=Profile.TestParametersAndNormatives}"/>
-
-            <Grid Grid.Row="2" Margin="35,0,0,0">
-                <Grid.Visibility>
-                    <MultiBinding Converter="{StaticResource MB2V}">
-                        <Binding ElementName="userTestPage" Path="Profile.IsHeightMeasureEnabled" />
-                        <Binding Source="{x:Static uiServiceConfig:Settings.Default}" Path="IsHeighMeasureEnable" />
-                    </MultiBinding>
-                </Grid.Visibility>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="1*" />
-                    <ColumnDefinition Width="0.95*" />
-                </Grid.ColumnDefinitions>
-
-                <Label Content="{x:Static res:Resources.Height}" Grid.Column="0"  Height="Auto" />
-                <Label Name="labelHeightResult2" x:FieldModifier="private" Grid.Column="1" Margin="0,0,7,0" HorizontalContentAlignment="Right" FontSize="{StaticResource FontSize26}" Height="Auto" />
-            </Grid>
+            <Border BorderThickness="1" BorderBrush="Black" Grid.Row="1" Margin="6,0,11,2">
+                <Grid Margin="-10,0,0,0">
+                    <Grid.Visibility>
+                        <MultiBinding Converter="{StaticResource MB2V}">
+                            <Binding ElementName="userTestPage" Path="Profile.IsHeightMeasureEnabled" />
+                            <Binding Source="{x:Static uiServiceConfig:Settings.Default}" Path="IsHeighMeasureEnable" />
+                        </MultiBinding>
+                    </Grid.Visibility>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="115"/>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="70"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Label Content="{x:Static res:Resources.Height}" Grid.Column="0" Height="Auto" />
+                    <Rectangle Fill="Black" Grid.Column="1" Width="1"/>
+                    <Rectangle Fill="Black" Grid.Column="2" Width="1" Margin="0,0,-8,0" HorizontalAlignment="Right"/>
+                    <Label Name="labelHeightResult2" x:FieldModifier="private" Grid.Column="3" HorizontalContentAlignment="Right" FontSize="{StaticResource FontSize26}" Height="Auto" />
+                </Grid>
+            </Border>
+            <customControl:ListViewResults Grid.Row="2" MaxHeight="740" x:Name="ListViewResults2" ItemsSource="{Binding ElementName=userTestPage, Path=Profile.TestParametersAndNormatives}"/>
         </Grid>
 
         <Line x:Name="line2" HorizontalAlignment="Left" Stroke="{StaticResource xBlue1}" StrokeThickness="1"
