--- a/SCME.WpfControlLibrary/Styles/ListViewItemTestParameter.xaml
+++ b/SCME.WpfControlLibrary/Styles/ListViewItemTestParameter.xaml
@@ -71,7 +71,7 @@
                             <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
                         <Border Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" BorderThickness="1" Background="Transparent" BorderBrush="#FFC9C9C9" />
-                        <Expander Style="{StaticResource CustomExpander}" Margin="10">
+                        <Expander Style="{StaticResource CustomExpander}" IsExpanded="{Binding DataContext.ReadOnlyMode, RelativeSource={RelativeSource FindAncestor, AncestorType=Page}, Mode=OneWay}" Margin="10">
                             <Expander.Header>
                                 <DockPanel>
                                     <Label Content="{Binding Converter={StaticResource TP2S}}" Foreground="Black" Width="732"/>
